third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/return_in_lambda_typed.exp
module 0x42::Test {
    fun adder(x: u64, y: u64): u64 {
        x + y
    }
    fun apply(f: |(u64, u64)|(u64), x: u64, y: u64): u64 {
        f(x, y)
    }
    public fun main(): u64 {
        apply(|(arg0,arg1)| __lambda__1__main(arg0, arg1), 10, 100);
        apply(|(arg0,arg1)| __lambda__2__main(arg0, arg1), 10, 100);
        apply(|(arg0,arg1)| __lambda__3__main(arg0, arg1), 10, 100)
    }
    fun __lambda__1__main(x: u64, y: u64): u64 {
        adder(x, y)
    }
    fun __lambda__2__main(x: u64, y: u64): u64 {
        adder(x, y)
    }
    fun __lambda__3__main(x: u64, y: u64): u64 {
        adder(x, y)
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ return_in_lambda_typed.move:9:16
  │
9 │         apply(|(arg0,arg1)| __lambda__1__main(arg0, arg1), 10, 100);
  │                ^
  │                │
  │                Unexpected '('
  │                Expected a variable or struct or variant name
